FIX: Uppdatera corsConfig